--- a/calculadora/Calculadora IMC JavaScript.html
+++ b/calculadora/Calculadora IMC JavaScript.html
@@ -15,7 +15,7 @@
         <button onclick="go(1,2)">Iniciar</button>
       </div>
       <div class="second-step">
-        <h3>CALCULADORA IMC</h3>
+        <h3>CALCULADORA IMC:</h3>
         <hr />
         <label for="peso">Digite seu peso:</label>
         <input type="number" placeholder="Seu peso" id="peso" />
